Altered Services formatting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15437,6 +15437,82 @@ h2.bd-postheader-5 a {
   margin-top: 31px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb245 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjI {}
+.bd-separator-2 {
+  padding: 10px 0px;
+}
+.bd-separator-2 .bd-separator-inner {
+  width: 100%;
+}
+.bd-separator-2 .bd-separator-inner:before,
+.bd-separator-2 .bd-separator-inner:after {
+  border-top: 1px solid #dddddd;
+}
+.bd-separator-content-19 {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.bd-separator-content-19 {
+  color: #777777;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjI {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjU {}
+.bd-separator-5 {
+  padding: 10px 0px;
+}
+.bd-separator-5 .bd-separator-inner {
+  width: 100%;
+}
+.bd-separator-5 .bd-separator-inner:before,
+.bd-separator-5 .bd-separator-inner:after {
+  border-top: 1px solid #dddddd;
+}
+.bd-separator-content-33 {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.bd-separator-content-33 {
+  color: #777777;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjU {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjY {}
+.bd-separator-6 {
+  padding: 10px 0px;
+}
+.bd-separator-6 .bd-separator-inner {
+  width: 100%;
+}
+.bd-separator-6 .bd-separator-inner:before,
+.bd-separator-6 .bd-separator-inner:after {
+  border-top: 1px solid #dddddd;
+}
+.bd-separator-content-46 {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.bd-separator-content-46 {
+  color: #777777;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjY {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjc {}
+.bd-separator-7 {
+  padding: 10px 0px;
+}
+.bd-separator-7 .bd-separator-inner {
+  width: 100%;
+}
+.bd-separator-7 .bd-separator-inner:before,
+.bd-separator-7 .bd-separator-inner:after {
+  border-top: 1px solid #dddddd;
+}
+.bd-separator-content-51 {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.bd-separator-content-51 {
+  color: #777777;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjc {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNvY2lhbGljb25zMg {}
 .bd-socialicons-2 {
   display: inline-block;
