--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20150,7 +20150,7 @@ a.bd-button-2[href]:focus,
   .side-button {
     width: 81px;
     height: 218px;
-    background-image: url(http://i.imgur.com/EWKq4Po.png);
+    background-image: url(https://smartsprout.co.uk/free-consultation-button-grey.png);
     background-repeat: no-repeat;
     position: fixed;
     margin-top: 140px;
