--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11673,7 +11673,7 @@ a.bd-backtotop-1:hover {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM2 {}
 @media (max-width: 767px) {
   .bd-layoutbox-36 {
-    height: 819px;
+    height: 100%;
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM2 {}
@@ -11688,15 +11688,28 @@ a.bd-backtotop-1:hover {
   -ms-transform: translateX(0) translateY(-50%);
   transform: translateX(0) translateY(-50%);
 }
+@media (max-width: 1199px) {
+  .bd-layoutbox-37 {
+    top: 46%;
+    height: 80%;
+    width: 80%;
+  }
+}
 @media (max-width: 991px) {
   .bd-layoutbox-37 {
-    top: 30%;
+    height: 80%;
+    width: 100%;
+    top: 50%;
   }
 }
 @media (max-width: 767px) {
   .bd-layoutbox-37 {
     width: 100%;
-    top: 30%;
+    top: 50%;
+    left: 0%;
+    right: 0%;
+    bottom: -22.835%;
+    height: 474px;
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM3 {}
@@ -11735,7 +11748,7 @@ a.bd-backtotop-1:hover {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQ1 {}
 .bd-layoutbox-45 {
   position: absolute;
-  top: 50%;
+  top: 40%;
   z-index: 1;
   right: 0;
   -webkit-transform: translateX(0) translateY(-50%);
@@ -12523,6 +12536,16 @@ a.bd-backtotop-1:hover {
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNg {}
+@media (max-width: 991px) {
+  .bd-linkbutton-16 {
+    margin-top: -39px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-linkbutton-16 {
+    margin-top: -29px;
+  }
+}
 .bd-button-41 a {
   line-height: 20.00000001px;
   font-size: 14px;
@@ -13079,6 +13102,11 @@ a.bd-backtotop-1:hover {
   float: left;
   margin-top: 20px;
   margin-bottom: 28px;
+}
+@media (max-width: 1199px) {
+  .bd-logo-2 {
+    margin-bottom: 13px;
+  }
 }
 @media (max-width: 991px) {
   .bd-logo-2 {
@@ -13801,7 +13829,7 @@ h2.bd-postheader-5 a {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24zMQ {}
 .bd-section-31 {
   background-color: #f2f2f2;
-  height: 100%;
+  height: 618px;
   -webkit-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.25);
   -o-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.25);
   -ms-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.25);
@@ -13823,6 +13851,7 @@ h2.bd-postheader-5 a {
 @media (max-width: 767px) {
   .bd-section-31 {
     height: 100%;
+    margin-top: 1px;
   }
 }
 .bd-section-31 h2 {
@@ -13844,6 +13873,7 @@ h2.bd-postheader-5 a {
 @media (max-width: 1199px) {
   .bd-section-32 {
     padding-right: 2em;
+    height: 80vh;
   }
 }
 @media (max-width: 991px) {
@@ -13854,9 +13884,8 @@ h2.bd-postheader-5 a {
 }
 @media (max-width: 767px) {
   .bd-section-32 {
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-bottom: 1em;
+    height: 80vh;
+    padding: 0px 1em;
   }
 }
 .bd-section-32 {
@@ -13906,6 +13935,7 @@ h2.bd-postheader-5 a {
 @media (max-width: 767px) {
   .bd-section-32 {
     margin-top: 0;
+    margin-bottom: 0;
   }
 }
 .bd-textureoverlay-4:before {
@@ -13921,7 +13951,8 @@ h2.bd-postheader-5 a {
 }
 @media (max-width: 767px) {
   .bd-parallaxbackground-4 {
-    margin-top: 0px;
+    margin-top: -14px;
+    margin-bottom: 1px;
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24zMg {}
@@ -14712,19 +14743,18 @@ h4.bd-textblock-102 {
 }
 @media (max-width: 767px) {
   .bd-textblock-137 {
-    height: 440px;
+    height: 377px;
   }
 }
 .bd-textblock-137 {
   line-height: 22.85714286px;
   font-size: 16px;
-  color: #555555;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEzNw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEzOA {}
 .bd-textblock-138 {
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-right: 0px;
+  padding-left: 0px;
   margin: 46px 0px 18px;
 }
 @media (max-width: 767px) {
@@ -14766,6 +14796,12 @@ h1.bd-textblock-14 {
 .bd-textblock-142 {
   margin-top: 10px;
 }
+@media (max-width: 767px) {
+  .bd-textblock-142 {
+    margin: 2px 0px 0px;
+    padding: 0px;
+  }
+}
 @media (max-width: 1199px) {
   h2.bd-textblock-142 {
     line-height: 117.14285718px;
@@ -14788,6 +14824,17 @@ h1.bd-textblock-14 {
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE0Mg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE0Mw {}
+@media (max-width: 991px) {
+  .bd-textblock-143 {
+    margin-top: 0px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-textblock-143 {
+    margin-bottom: 2px;
+    margin-top: 8px;
+  }
+}
 h2.bd-textblock-143 {
   color: #ffffff;
 }
@@ -14893,6 +14940,30 @@ h2.bd-textblock-169 {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2OQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3 {}
+.bd-textblock-17 {
+  height: 151px;
+}
+@media (max-width: 1199px) {
+  .bd-textblock-17 {
+    height: 176px;
+  }
+}
+@media (max-width: 991px) {
+  .bd-textblock-17 {
+    height: 220px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-textblock-17 {
+    height: 484px;
+  }
+}
+.bd-textblock-17 {
+  line-height: 22.85714286px;
+  font-size: 16px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3MA {}
 .bd-textblock-170 {
   margin-bottom: 0px;
@@ -15298,6 +15369,8 @@ h1.bd-textblock-253 {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazI5 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMw {}
 .bd-textblock-30 {
   margin-top: 0px;
@@ -15672,6 +15745,8 @@ h2.bd-textblock-7 {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazc4 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazgy {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazgy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg2 {}
@@ -16356,6 +16431,11 @@ a.bd-itemremovelink-1:hover {
   margin-top: 28px;
   margin-bottom: 15px;
 }
+@media (max-width: 1199px) {
+  .bd-hmenu-1 {
+    margin-top: 13px;
+  }
+}
 @media (max-width: 991px) {
   .bd-hmenu-1 {
     float: left;
@@ -16364,6 +16444,7 @@ a.bd-itemremovelink-1:hover {
 @media (max-width: 767px) {
   .bd-hmenu-1 {
     float: none;
+    margin-top: 0px;
   }
 }
 @media (min-width: 768px) {
