Home page text changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14743,7 +14743,7 @@ h4.bd-textblock-102 {
 }
 @media (max-width: 767px) {
   .bd-textblock-137 {
-    height: 377px;
+    height: 100%;
   }
 }
 .bd-textblock-137 {
@@ -14942,7 +14942,7 @@ h2.bd-textblock-169 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2OQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3 {}
 .bd-textblock-17 {
-  height: 151px;
+  height: 100%;
 }
 @media (max-width: 1199px) {
   .bd-textblock-17 {
