--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10953,12 +10953,11 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwxNg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwxOA {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwxOA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWwy {}
 .bd-customhtml-2 {
   height: 135px;
-}
-.bd-customhtml-2 {
-  text-align: center;
 }
 .footer-links a {
   color: #fff !important;
@@ -11073,6 +11072,12 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw3 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw4 {}
+.bd-customhtml-8 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw5 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWN1c3RvbWh0bWw5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWZvb3RlcmFyZWEx {}
@@ -11221,6 +11226,10 @@ a.bd-backtotop-1:hover {
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50OQ {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50OQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWljb25saW5rMg {}
+.bd-iconlink-2 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
 .bd-icon-24:before {
   content: '\129';
 }
@@ -12394,6 +12403,9 @@ a.bd-backtotop-1:hover {
 .bd-layoutcontainer-6 > .bd-container-inner > .container-fluid {
   padding-left: 0;
   padding-right: 0;
+}
+.bd-layoutcolumn-10 a {
+  text-align: left;
 }
 @media (max-width: 767px) {
   .bd-layoutcolumn-10 {
@@ -13759,12 +13771,12 @@ h2.bd-postheader-5 a {
 }
 .bd-section-2 {
   line-height: 27.2px;
-  text-align: center;
+  text-align: left;
   font-size: 16px;
   color: #ffffff;
 }
 .bd-section-2 a {
-  color: #5cb85c;
+  color: #ffffff;
 }
 .bd-section-2 a:hover {
   color: #ffffff;
@@ -14651,11 +14663,6 @@ h2.bd-postheader-5 a {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRhcmVhMg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRhcmVhNA {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRhcmVhNA {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE {}
-.bd-textblock-1 {
-  color: #ffffff;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEw {}
 .bd-textblock-10 {
   margin-top: 10px;
@@ -14918,8 +14925,6 @@ h2.bd-textblock-143 {
   margin-bottom: 61px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE1OQ {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2 {}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2OA {}
 .bd-textblock-168 {
   margin-top: 0px;
@@ -15579,6 +15584,15 @@ h2.bd-textblock-40 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazU {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUx {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUx {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUy {}
+.bd-textblock-52 {
+  margin: 0px;
+  padding: 0px;
+}
+.bd-textblock-52 {
+  font-weight: bold;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazUz {}
 .bd-textblock-53 {
   margin-top: 19px;
